バリデーション設定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import "config/reset";
 @import 'bootstrap/functions';
 @import 'bootstrap';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 
 // devise
