--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -9,12 +9,15 @@
         %hr/
         .row
           .col-sm-6
-            =link_to "",class:"btn btn-twitter-inverse btn-block btn-lg" do
+            =link_to user_twitter_omniauth_authorize_path ,class:"btn btn-twitter-inverse btn-block btn-lg" do
               %i.fab.fa-twitter
               Twitterアカウントで登録
-            =link_to "",class:"btn btn-twitter-inverse btn-block btn-lg" do
+            =link_to user_google_oauth2_omniauth_authorize_path ,class:"btn btn-twitter-inverse btn-block btn-lg" do
               %i.fab.fa-google
               Googleアカウントで登録
+            =link_to user_facebook_omniauth_authorize_path ,class:"btn btn-twitter-inverse btn-block btn-lg" do
+              %i.fab.fa-facebook
+              Facebookアカウントで登録
             .help-block Quutaが許可無くTwitterに投稿することはありません。
             .sessionsLayout_guide
               もしQuutaのアカウントを持っている場合は
