--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,7 +4,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import 'simplemde.min.css';
-
+@import 'header';
 
 // devise
 @import "devise/new";
