--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -1,79 +1,5 @@
-#globalHeader.st-Header
-  .st-Header_container
-    .st-Header_start
-      %a.st-Header_logo.mr-1
-        = link_to root_path,class:"home-link" do
-          = image_tag 'quuta.png', height:'36'
-        .st-Header_realmSelector{tabindex: "0"}
-          %span.fa.fa-fw.fa-caret-down
-        .st-Header_dropdown.st-RealmSelector
-          .st-RealmSelector_realms
-            %a.st-Header_dropdownItem.st-RealmItem
-        .d-none.d-lg-block.st-Header_home{tabindex: "0"}
-          ホーム
-          %span.fa.fa-fw.fa-caret-down.ml-1of2
-        .d-none.d-lg-block.st-Header_community{tabindex: "0"}
-          コミュニティ
-          %span.fa.fa-fw.fa-caret-down.ml-1of2
-      %form.st-Header_search{action: "/search", method: "get"}
-        %span.fa.fa-search
-        %input.st-Header_searchInput{autocomplete: "off", name: "q", placeholder: "キーワードを入力", required: "", type: "search"}/
-    - if user_signed_in?
-      .st-Header_end
-        %a.st-Header_stock.mr-2.py-2{href: "/stock"}
-          %span.fa.fa-fw.fa-folder-open.mr-1of2
-          %span.st-Header_stock-label.d-none.d-lg-block お気に入り一覧
-          %a.mr-2.px-2
-            = link_to new_article_path, class: "st-Header_postButton"do
-              %span.fas.fa-fw.fa-pen-square.mr-1
-              投稿する
-          .u-relative
-            .st-Header_loginUser{tabindex: "0"}
-              = image_tag 'quuta.png', height:'20', alt: "", src: ""
-              %span.fa.fa-fw.fa-caret-down.ml-1
-    - else
-      .st-Header_end
-        = link_to signup_path, class: "st-Header_signupButton" do
-          ユーザ登録
-        = link_to login_path, class: "st-Header_loginLink" do
-          ログイン
-
+= render "shared/header"
       
 = link_to "logout","/signout",{method: :delete}
 
-%footer#globalFooter.st-Footer
-  .st-Footer_container
-    .st-Footer_start.col-sm-12.col-md-5.col-lg-5
-      .st-Footer_logo
-        = link_to root_path,class:"home-link" do
-          = image_tag 'quuta.png', height:'36'
-      .st-Footer_catchcopy Baseball players is here.
-      .st-Footer_socials
-        %a.fab.fa-twitter
-        %a.fab.fa-facebook-square
-    .st-Footer_end.col-sm-12.col-md-7.col-lg-5
-      .st-Footer_qiita
-        .st-Footer_label Quuta
-        .st-Footer_list
-          .st-Footer_column
-            %a About
-            %a 利用規約
-            %a プライバシー
-            %a ガイドライン
-          .st-Footer_column
-            %a API
-            %a ご意見
-            %a ヘルプ
-            %a 広告掲載
-      .st-Footer_increments
-        .st-Footer_label Quuuta
-        .st-Footer_list
-          .st-Footer_column
-            %a About
-            %a 採用情報
-            %a ブログ
-          .st-Footer_column
-            %a Quuuta Team
-            %a Quuuta Jobs
-            %a Quuuta Zine
-  .st-Footer_copyright © 2019.
+= render "shared/footer"
