--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,6 +1,6 @@
 .st-Header {
-  padding-right: 16px;
-  padding-left: 16px;
+  padding-right: 1.6rem;
+  padding-left: 1.6rem;
   background-color: #55c500;
   color: #fff;
   .fa-caret-down {
@@ -12,8 +12,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 56px;
-    max-width: 1100px;
+    height: 5.6rem;
+    max-width: 110rem;
     margin-left: auto;
     margin-right: auto;
     .st-Header_start {
@@ -23,7 +23,7 @@
       height: 100%;
       position: relative;
       .home-link {
-        margin-right: 5px;
+        margin-right: 0.5rem;
       }
       .st-Header_home {
         display: flex;
@@ -37,9 +37,9 @@
         user-select: none;
         font-size: 1.2rem;
         line-height: 1;
-        margin-top: 4px;
-        margin-left: 24px;
-        padding: 16px 0;
+        margin-top: 0.4rem;
+        margin-left: 2.4rem;
+        padding: 1.6rem 0;
         outline: none;
       }
       .st-Header_community {
@@ -54,34 +54,34 @@
         user-select: none;
         font-size: 1.2rem;
         line-height: 1;
-        margin-top: 4px;
-        margin-right: 24px;
-        margin-left: 24px;
-        padding: 16px 0;
+        margin-top: 0.4rem;
+        margin-right: 2.4rem;
+        margin-left: 2.4rem;
+        padding: 1.6rem 0;
         outline: none;
     }
       .st-Header_search {
         position: relative;
-        width: 200px;
+        width: 20rem;
         .fa {
           position: absolute;
-          top: 10px;
-          left: 9px;
+          top: 1rem;
+          left: 0.9rem;
           color: #aaa;
         }
         .fa-folder-open {
-          margin-right: 5px;
+          margin-right: 0.5rem;
         }
         .st-Header_searchInput {
           width: 100%;
-          height: 32px;
+          height: 3.2rem;
           border: none;
-          border-radius: 4px;
+          border-radius: 0.4rem;
           background-color: #fff;
           font-size: 1.2rem;
-          box-shadow: inset 0 1px 2px #ccc;
-          padding-left: 32px;
-          padding-right: 8px;
+          box-shadow: inset 0 0.1rem 0.2rem #ccc;
+          padding-left: 3.2rem;
+          padding-right: 0.8rem;
         }
       }
     }
@@ -101,9 +101,9 @@
         user-select: none;
         font-size: 1.2rem;
         line-height: 1;
-        margin-top: 4px;
-        margin-right: 16px;
-        padding: 16px 0;
+        margin-top: 0.4rem;
+        margin-right: 1.6rem;
+        padding: 1.6rem 0;
         .st-Header_stock-label {
           margin-left: 1rem;
         }
@@ -112,22 +112,22 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 32px;
+        height: 3.2rem;
         background-color: #3f9200;
         color: #fff;
-        border-radius: 4px;
+        border-radius: 0.4rem;
         font-size: 1.2rem;
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-        padding: 0 16px 0 12px;
-        margin-right: 16px;
+        padding: 0 1.6rem 0 1.2rem;
+        margin-right: 1.6rem;
         .fas {
           display: inline-block;
           font-size: inherit;
           text-rendering: auto;
-          padding-right: 15px;
+          padding-right: 1.5rem;
           -webkit-font-smoothing: antialiased;
           -moz-osx-font-smoothing: grayscale;
         }
@@ -140,17 +140,17 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 32px;
+        height: 3.2rem;
         color: #fff;
-        border-radius: 4px;
-        border: 2px solid #fff;
+        border-radius: 0.4rem;
+        border: 0.2rem solid #fff;
         font-size: 1.2rem;
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-        padding: 0 16px;
-        margin-right: 16px;
+        padding: 0 1.6rem;
+        margin-right: 1.6rem;
         transition: background-color .08s ease-in-out;
         z-index: 1;
       }
