--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -22,7 +22,7 @@
             %a ご意見
             %a ヘルプ
             %a 広告掲載
-      .st-Footer_increments
+      .st-Footer_quuuta
         .st-Footer_label Quuuta
         .st-Footer_list
           .st-Footer_column
