--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,6 +1,253 @@
-#content
-  #mdraw
-    = @articles.text
+= render "shared/header"
+
+%article.p-items.logged-in
+  .p-items_wrapper
+    .p-items_container
+      .p-items_stickyMenu.it-Actions
+        %div
+          .it-Actions_item.it-Actions_item-like.likable
+            %a.it-Actions_likeCount 11
+            %button
+              %i.fa.fa-fw.fa-thumbs-up
+          .it-Actions_item.it-Actions_item-favorite
+            %button
+              %i.far.fa-star
+          .it-Actions_jumpToCommentButton
+            .it-Actions_commentCount 1
+            .fa.fa-fw.fa-comment
+          .SocialMediaShareButton.SocialMediaShareButton--twitter
+            %div
+              %svg.social-icon.social-icon--twitter{fill: "white", height: "32", viewbox: "0 0 64 64", width: "32"}
+                %g
+                  %circle{cx: "32", cy: "32", fill: "#00aced", r: "31"}
+                %g
+                  %path{d: "M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"}
+          .SocialMediaShareButton.SocialMediaShareButton--facebook{role: "button", style: "margin-top: 1.6rem;", tabindex: "0"}
+            %div{style: "width: 3.2rem; height: 3.2rem;"}
+              %svg.social-icon.social-icon--facebook{fill: "white", height: "32", viewbox: "0 0 64 64", width: "32"}
+                %g
+                  %circle{cx: "32", cy: "32", fill: "#3b5998", r: "31"}
+                %g
+                  %path{d: "M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"}
+      .p-items_main
+        .p-items_article
+          .it-Header
+            .u-flex-center-between.mb-3
+              .it-Header_info
+                .it-Header_author
+                  %a{href:""}
+                    //ユーザーアイコンとリンク
+                    %img.it-Header_authorImage
+                  // ユーザーマイページのリンク
+                  %a.it-Header_authorName
+                    ="@#{@article.user.nickname}"
+                .it-Header_time
+                  =@article.updated_at.strftime("%Y年%m月%d日")
+                  に更新
+                .it-Header_meta
+                  .it-Header_manipulate
+                    .it-Header_dropdown
+                      %a.it-Header_dropdownToggle{"aria-expanded":"false", "data-toggle":"dropdown", href:""}
+                        %span.fa.fa-ellipsis-h.fa-lg
+                      %ul.dropdown-menu.dropdown-menu-right
+                        %li.divider{role:"separator"}
+                        %li.dropdown__item
+                          %a{href:""}
+                            %span.fa.fa-fw.fa-thumbs-up
+                            いいねしたユーザー一覧
+                        %li.dropdown__item
+                          %a{href:""}
+                            %span.fa.fa-fw.fa-flag
+                            問題がある記事を報告する
+            %h1.it-Header_title タイトル
+            -# =@article.title
+            .it-Tags
+              %a.it-Tags_item{href:"/tags/chaosengineering"}
+                %span タグ
+          %div{"data-mount-target":"mobileArticleActions"}
+          %section.it-MdContent{itemprop:"articleBody"}
+            #item-2245429ce96027e27949
+              #content
+                #mdraw
+                  =@article.text
+          %div{"data-mount-target": "articleFooterMenu"}
+            .it-Footer
+              .it-Footer_actions
+                .it-Footer_favorite
+                  %button
+                    %span.far.fa-star
+                    %span.it-Footer_favoriteLabel お気に入り
+                .it-Footer_like
+                  .LikeButton
+                    %button.p-button
+                      %i.fa.fa-fw.fa-thumbs-up
+                      %span いいね
+                    %a.LikeButton__balloon{href: ""}  11
+              .it-Footer_social
+                .SocialMediaShareButton.SocialMediaShareButton--twitter.it-Footer_shareButton.it-Footer_shareButton-twitter
+                  %div{style: "width: 3.2rem; height: 3.2rem;"}
+                    %svg.social-icon.social-icon--twitter{fill: "white", height: "32", viewbox: "0 0 64 64", width:"32"}
+                      %g
+                        %circle{cx: "32", cy: "32", fill: "#00aced", r: "31"}
+                      %g
+                        %path{d: "M48,22.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6 C41.7,19.8,40,19,38.2,19c-3.6,0-6.6,2.9-6.6,6.6c0,0.5,0.1,1,0.2,1.5c-5.5-0.3-10.3-2.9-13.5-6.9c-0.6,1-0.9,2.1-0.9,3.3 c0,2.3,1.2,4.3,2.9,5.5c-1.1,0-2.1-0.3-3-0.8c0,0,0,0.1,0,0.1c0,3.2,2.3,5.8,5.3,6.4c-0.6,0.1-1.1,0.2-1.7,0.2c-0.4,0-0.8,0-1.2-0.1 c0.8,2.6,3.3,4.5,6.1,4.6c-2.2,1.8-5.1,2.8-8.2,2.8c-0.5,0-1.1,0-1.6-0.1c2.9,1.9,6.4,2.9,10.1,2.9c12.1,0,18.7-10,18.7-18.7 c0-0.3,0-0.6,0-0.8C46,24.5,47.1,23.4,48,22.1z"}
+                .SocialMediaShareButton.SocialMediaShareButton--facebookit-Footer_shareButton.it-Footer_shareButton-facebook
+                  %div{style: "width: 3.2rem; height: 3.2rem;"}
+                    %svg.social-icon.social-icon--facebook{fill: "white", height: "32", viewbox: "0 0 64 64", width: "32"}
+                      %g
+                        %circle{cx: "32", cy: "32", fill: "#3b5998", r: "31"}
+                      %g
+                        %path{d: "M34.1,47V33.3h4.6l0.7-5.3h-5.3v-3.4c0-1.5,0.4-2.6,2.6-2.6l2.8,0v-4.8c-0.5-0.1-2.2-0.2-4.1-0.2 c-4.1,0-6.9,2.5-6.9,7V28H24v5.3h4.6V47H34.1z"}
+              .__react_component_tooltip.place-top.type-dark
+          .ai-Container
+            .ai-User
+              %a{href:""}
+                %img.ai-User_image{src:""}
+              .ai-User_body
+                .ai-User_header
+                  %a.ai-User_name{href: ""} MEI　SEI
+                  =link_to "@#{@article.user.nickname}", "",class:"ai-User_urlname"
+                .ai-User_description
+                  ユーザー説明
+                %a.ai-User_website{href: "http://d.hatena.ne.jp/mazinlabs"} ユーザーURL
+                .ai-User_footer
+                  %span.userFollowButton
+                    %button.btn.btn-default.btn-block.userFollowButton_inner.btn-xs
+                      %i.i.fa.fa-user-plus>
+                      フォロー
+                %script.js-react-on-rails-component
+      .p-items_options
+      .p-items_toc
+        .it-Toc
+          .it-Toc_nav
+            %ul
+              %li
+                %a{href: ""} 見出しごとのリンク
+                %ul
+                  %li
+                    %a{href: ""} 見出しごとのリンク
+              %li
+                %a{href: ""} 見出しごとのリンク
+  .p-items_container
+    .p-items_leftDummy
+    .p-items_main
+      .p-items_aside.mt-5
+        -# 被リンク記事表示の際、使用
+        -# #logly-lift-4279494
+        -# .p-items_aside.mt-4
+        -#   .p-items_footnote
+        -#     %ul.references.js-referencesView.mt-5
+        -#       %li.references_header
+        -#         %i.fa.fa-fw.fa-link
+        -#         この記事は以下の記事からリンクされています
+        -#       %li.references_reference.js-reference
+        -#         %a{href: "/takahoyo/items/4f8af6b68d2c1f3a7775#_reference-86fc3a02e90d6fa6a444"}
+        -#           %img{:alt => "", :height => "18", :src => "https://s3-ap-northeast-1.amazonaws.com/qiita-image-store/0/67875/60c1776248cedf03de9774ac36ed98fc1a97399e/x_large.png?1576297134", :width => "18"}>/
+        -#           リンクしてる記事
+        -#         %span からリンク
+        -#         %time.references_datetime.js-dateTimeView{:datetime => "2019-12-15T14:59:27+00:00"} 約14時間前
+        .p-items_aside.mt-5
+          -# コメント実装時、使用
+          -# #comments.itemsShowComment_wrapper
+          -#   #PublicCommentListContainer-react-component-3b26de0e-42d9-4a6c-94a5-69486093ba0a
+          -#     .commentList
+          -#       .comment
+          -#         .commentHeader
+          -#           .commentHeader_creator
+          -#             %a{href: "/hirorock", :itemprop => "url", :title => "hirorock"}
+          -#               %img.commentHeader_creatorIcon{:alt => "", :height => "36", :itemprop => "image", :src => "https://qiita-user-profile-images.imgix.net/https%3A%2F%2Fqiita-image-store.s3.amazonaws.com%2F0%2F37670%2Fprofile-images%2F1473687506?ixlib=rb-1.2.2&auto=compress%2Cformat&lossless=0&w=48&s=aa87a822e7d5621fa14d46c0d7012e2f", :width => "36"}/
+          -#             .commentHeader_creatorInfo
+          -#               .commentHeader_publicUrlName
+          -#                 %a{href: "/hirorock"} コメントユーザー名
+          -#               .commentHeader_contribution
+          -#                 %span.commentHeader_contribution_count 198
+          -#                 %span.commentHeader_contribution_unit contribution
+          -#           .commentHeader_metadata.pull-right
+          -#             .text-right
+          -#               %a{href: "#comment-077e28b95c870e3a277b"}
+          -#                 %time{:datetime => "2019-12-14T23:46:15+09:00", :itemprop => "commentTime"} 2019-12-14 23:46
+          -#               %span
+          -#                  | 
+          -#                 %a{"data-target" => "#js-comment-report-form-1487128", "data-toggle" => "modal", href: "#"} 通報
+          -#             .LikeButton.LikeButton--small
+          -#               %button.p-button
+          -#                 %span.fa.fa-fw.fa-thumbs-up
+          -#                 %span いいね
+          -#               .LikeButton__balloon 4
+          -#           #js-comment-report-form-1487128.js-comment-report-form.modal.fade.reportForm
+          -#             .modal-dialog
+          -#               .modal-content
+          -#                 .modal-header
+          -#                   %button.close{"data-dismiss" => "modal", :name => "button", :type => "submit"} ×
+          -#                   %h4.modal-title 問題があるコメントを報告する
+          -#                 .modal-body
+          -#                   %form#new_public_issue_report.new_public_issue_report{"accept-charset" => "UTF-8", :action => "/api/internal/issue_reports", :method => "post"}
+          -#                     %input{:name => "utf8", :type => "hidden", :value => "✓"}/
+          -#                     %input{:name => "authenticity_token", :type => "hidden", :value => "UInz9pucuhr9CYN8d2enqIhPrT/SwBFRwZr0d0VhDh9tWNYzAmMWr2A2dXBMh8rOecAnAdKprdY02jcnArm0CA=="}/
+          -#                     %input#public_issue_report_target_type{:name => "public_issue_report[target_type]", :type => "hidden", :value => "Comment"}/
+          -#                     %input#public_issue_report_target_id{:name => "public_issue_report[target_id]", :type => "hidden", :value => "1487128"}/
+          -#                     %p この投稿にどのような問題がありますか？
+          -#                     %br/
+          -#                     .form-group
+          -#                       %ul.list-unstyled
+          -#                         %li
+          -#                           %label
+          -#                             %input#public_issue_report_reason_spam{:name => "public_issue_report[reason]", :required => "", :type => "radio", :value => "spam"}>/
+          -#                             スパムです
+          -#                         %li
+          -#                           %label
+          -#                             %input#public_issue_report_reason_harassment{:name => "public_issue_report[reason]", :required => "", :type => "radio", :value => "harassment"}>/
+          -#                             攻撃的または迷惑な内容を含んでいます
+          -#                         %li
+          -#                           %label
+          -#                             %input#public_issue_report_reason_inappropriate_content{:name => "public_issue_report[reason]", :required => "", :type => "radio", :value => "inappropriate_content"}>/
+          -#                             不適切な内容を含んでいます
+          -#                     .reportForm_submitButtonContainer
+          -#                       %button.btn.btn-primary.reportForm_submitButton{:name => "button", :type => "submit"}
+          -#                         %i.fa.fa-send>
+          -#                         送信
+          -#         .comment_content
+          -#           .it-MdContent
+          -#             %p
+          -#               コメント本文
+          -#       .commentForm
+          -#         %form{:action => "/comments/", :datatype => "json", :method => "post"}
+          -#           .commentForm_header
+          -#             %img.commentForm_userIcon{:height => "36", :src => "https://pbs.twimg.com/profile_images/1174154846615662593/S8pmypM9_bigger.jpg", :width => "36"}/
+          -#             .commentForm_headerLabel コメントを投稿する
+          -#           .commentForm_contentHeader
+          -#             .commentForm_tabs
+          -#               %a.commentForm_tab.edit.active 編集
+          -#               %a.commentForm_tab.preview プレビュー
+          -#             .commentForm_toolbar{:style => "display: flex;"}
+          -#               .markdownHelp_button
+          -#                 %i.fa.fa-question-circle{:currentitem => "false", "data-for" => "markdown-help-button", "data-tip" => "Markdown の書き方"}
+          -#                   #markdown-help-button.__react_component_tooltip.place-top.type-dark{"data-id" => "tooltip"}
+          -#               .emojiPicker
+          -#                 %span.emojiPicker_label
+          -#                   %i.fa.fa-smile-o{:currentitem => "false", "data-for" => "emoji-picker-tooltip-button", "data-tip" => "絵文字"}
+          -#                   #emoji-picker-tooltip-button.__react_component_tooltip.place-top.type-dark{"data-id" => "tooltip"}
+          -#                 .emojiPicker_container
+          -#           .commentForm_body.content-area.tab-pane{:style => "display: block;"}
+          -#             %textarea.form-control.commentForm_textarea{:maxlength => "10000", :placeholder => "コメントを入力してください", :style => "min-height: 100px; max-height: 500px; overflow: hidden; overflow-wrap: break-word; resize: none; height: 100px;"}
+          -#           .preview-area.tab-pane{:style => "display: none;"}
+          -#           .commentForm_imageUploader
+          -#             %input.commentForm_inputImageFile{:tabindex => "-1", :type => "file"}/
+          -#             %span.btn.btn-default.btn-xs.commentForm_imageUploader-button
+          -#               %i.fa.fa-picture-o>
+          -#               画像を選択
+          -#             %span.commentForm_imageUploader-text またはドラッグ＆ドロップ
+          -#             %span
+          -#               %span.commentForm_imageUploader-size
+          -#                 %span> - 209.88KB
+          -#                 \/
+          -#                 %span 100MB
+          -#               %i.fa.fa-info-circle.commentForm_imageUploader-info{"data-original-title" => "今月アップロード可能な画像の残り容量です", "data-placement" => "top", "data-toggle" => "tooltip", :title => ""}
+          -#             .commentForm_btns
+          -#               %button.btn.btn-primary.btn-sm 投稿
+      .p-items_rightDummy
+= render "shared/footer"
+
 
 :javascript
   document.getElementById('content').innerHTML =
