--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,8 @@
     %title Quuta
     %link{:href => "https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css", :rel => "stylesheet"}/
     %script{:src => "https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"}
-    %script{:src => "marked.js"}
+    %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.10/vue.js"}
+    %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.js"}
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
