--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -1,5 +1,8 @@
 = render "shared/header"
       
 = link_to "logout","/signout",{method: :delete}
+- if user_signed_in?
+  = current_user.nickname
+  = current_user.email
 
 = render "shared/footer"
