--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -24,7 +24,9 @@
               =link_to "ログイン", "/login" 
               から。
           .col-sm-6.sessionsLayoutFormColumn
-            =devise_error_messages!
+            -if devise_error_messages!.present?
+              .alert.alert-danger
+                =devise_error_messages!
             =form_for resource, as: resource_name, url: signup_path do |f|
               .form-group
                 = f.text_field :nickname, class:"form-control", id:"user_url_name", placeholder:"ユーザ名", required:"required"
