ロゴ　仮置き

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,7 +3,7 @@
     .st-Header_start
       %a.st-Header_logo.mr-1
         = link_to root_path,class:"home-link" do
-          = image_tag 'quuta.png', height:'36'
+          = image_tag 'quutalogo.png', height:'36'
         .st-Header_realmSelector{tabindex: "0"}
           %span.fa.fa-fw.fa-caret-down
         .st-Header_dropdown.st-RealmSelector
