--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -7,6 +7,6 @@
     .form-group
       #editor
         = f.label :text
-        = f.text_area :text, rows: 5, class: 'form-control', id: 'article_text', "v-model" => "input"
-        %div{"v-html" => "input | marked"}
+        = f.text_area :text, rows: 5, class: 'form-control', id: 'article_text'
+        #marked-area
       = f.submit nil, class: 'btn btn-success'
