--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -2,56 +2,73 @@
 .p-settings.px-2.pt-4{class: "px-1@s pt-1@s"}
   .p-settings_container
     .p-settings_menu
-      %a.p-settings_menuItem.p-settings_menuItem-active{href: "/settings/profile"} 公開用プロフィール
-      %a.p-settings_menuItem{href: ""} アカウント
+      =link_to "公開用プロフィール", "/setting/profile", {class:"p-settings_menuItem p-settings_menuItem-active"}
+      =link_to "アカウント","",{class:"p-settings_menuItem"}
     .p-settings_main
       .p-settings_titleSection
         %a.p-settings_userLogo{href: ""}
+          //アイコン機能実装時、変更
           %img{src: "https://pbs.twimg.com/profile_images/1174154846615662593/S8pmypM9_bigger.jpg"}
-        %a.p-settings_userName{href: ""}
+        =link_to "",{class:"p-settings_userName"} do
           ="@#{current_user.nickname} アカウント"
         %span.p-settings_titleSeparator /
         %span.p-settings_title 公開用プロフィール
-      %form#edit_user_549538.simple_form.edit_user
+      =form_for @profile,url:setting_profile_path, html:{id:"edit_user", class:"simple_form edit_user"} do |f|
         .st-Form
           %label.string.optional.st-Form_label 名前
           .us-Form_twoColumn
-            %input#user_first_name.st-Form_text{ placeholder: "名", type: "text"}/
-            %input#user_last_name.st-Form_text{ placeholder: "姓", type: "text"}/
+            = f.text_field :firstname ,placeholder: "名", id:"user_first_name", class:"st-Form_text"
+            = f.text_field :lastname ,placeholder: "姓", id:"user_last_name", class:"st-Form_text"
+          .st-Form_help
+            500文字以内
+          .st-Form_help
+            500文字以内
         .st-Form
           %label.email.optional.st-Form_label 公開メールアドレス
           %div
             %label
-              %input{ type: "hidden", value: "0"}/
-              %input#user_public_email.st-Form_checkbox{ type: "checkbox" }/
+              = f.check_box :email_status, id:"user_public_email", class:"st-Form_checkbox"
               メールアドレスを全体に公開する
           .st-Form_help
             誰もがあなたのメールアドレス(
             %small
               = current_user.email
             )を見れる状態になります。
-            %a{href: "/settings/notifications"} メールアドレスを変更
+            =link_to "メールアドレスを変更", ""
         .st-Form.team
           %label.st-Form_label.position 所属チーム
-          %input#user_website_url.st-Form_text{type:"text"}        
+          = f.text_field :team ,placeholder: "現在所属しているチーム、学校名など", id:"user_team", class:"st-Form_text"
         .st-Form.position
           %label.st-Form_label.position ポジション
-          %input#user_website_url.st-Form_text{type:"text"}
+          .select-wrrapper
+            .select-arrow
+              %i.fas.fa-chevron-down
+            = f.select :position, @positions,{include_blank: "---"},{class:"st-Form_select"}
         .st-Form.batting_throwing
           %label.st-Form_label.batting_throwing 投打
-          %input#user_organization.st-Form_text{type:"text"}
+          .us-Form_twoColumn
+            .select-wrrapper
+              .select-arrow{style:"margin-top: 0.6rem;"}
+                %i.fas.fa-chevron-down
+              = f.select :position, @batting,{include_blank: "---"},{class:"st-Form_select"}
+            .select-wrrapper
+              .select-arrow{style:"margin-top: 0.6rem;"}
+                %i.fas.fa-chevron-down
+              = f.select :position, @throwing,{include_blank: "---"},{class:"st-Form_select"}
         .st-Form.text.optional.user_description
           %label.st-Form_label.text.optional 自己紹介
-          %textarea#user_description.st-Form_text.text.optional
+          = f.text_area :description ,placeholder: "あなたの球歴、好きな選手、得意なプレーなど、ご自由にお書きください", id:"user_description", class:"st-Form_text"
+          .st-Form_help
+            500文字以内
         .st-Form
           %label.string.optional.st-Form_label Twitter ID
           .st-Form_group
             .st-Form_groupBefore https://twitter.com/
-            %input#user_twitter_id.st-Form_groupText{ type:"text" }
+            = f.text_field :twitter, id:"user_twitter_id", class:"st-Form_groupText"
         .st-Form
           %label.string.optional.st-Form_label Facebook ID
           .st-Form_group
             .st-Form_groupBefore https://www.facebook.com/
-            %input#user_facebook_id.st-Form_groupText{ type:"text" }
-        %input.st-Form_submit{type: "submit", value: "更新する"}/
+            = f.text_field :facebook, id:"user_facebook_id", class:"st-Form_groupText"
+        = f.submit :"更新する", class:"st-Form_submit"
 = render "shared/footer"
