--- a/app/assets/stylesheets/profiles/edit.scss
+++ b/app/assets/stylesheets/profiles/edit.scss
@@ -72,6 +72,9 @@
         .p-settings_title {
           font-weight: 700;
         }
+        .p-setteings_nameNil{
+          color: #555;
+        }
       }
       .simple_form{
         .st-Form {
@@ -160,15 +163,25 @@
               position: absolute;
               right: 1.6rem;
               top: 50%;
-              z-index: 2;
+              z-index: 1;
               color: #888;
               font-size: 1.8rem;
               -webkit-transform: translate(0, -50%);
               transform: translate(0, -50%);
+              pointer-events: none;
             }
           }
           textarea{
             min-height: 15rem;
+          }
+          .error_wrapper{
+            display: flex;
+            justify-content: space-between;
+            align-items: stretch;
+            .st-Form_help {
+              width:100%;
+            }
+
           }
         }
         .st-Form_help {
@@ -191,7 +204,6 @@
           margin: 2.4rem auto 0;
           cursor: pointer;
           text-decoration: none;
-
         }
       }
     }
