--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -2,21 +2,22 @@
 .p-settings.px-2.pt-4{class: "px-1@s pt-1@s"}
   .p-settings_container
     .p-settings_menu
-      =link_to "公開用プロフィール", "/setting/profile", {class:"p-settings_menuItem p-settings_menuItem-active"}
-      =link_to "アカウント","",{class:"p-settings_menuItem"}
+      =link_to "プロフィール", "/setting/profile", {class:"p-settings_menuItem p-settings_menuItem-active"}
+      =link_to "ユーザー設定","/setting/account",{class:"p-settings_menuItem"}
     .p-settings_main
       .p-settings_titleSection
-        %a.p-settings_userLogo{href: ""}
+        // ユーザーマイページへのリンク
+        %a.p-settings_userLogo{href: ""} 
           //アイコン機能実装時、変更
           %img{src: "https://pbs.twimg.com/profile_images/1174154846615662593/S8pmypM9_bigger.jpg"}
         -if current_user.nickname.nil?
-          =link_to "", {class:"p-setteings_nameNil"} do
-            ユーザー名を設定してください
+          =link_to "/setting/account", {class:"p-setteings_nameNil"} do
+            ユーザー名が設定されていません
         -else
           =link_to "",{class:"p-settings_userName"} do
             ="@#{current_user.nickname} アカウント"
         %span.p-settings_titleSeparator /
-        %span.p-settings_title 公開用プロフィール
+        %span.p-settings_title プロフィール
       =form_for @profile,url:setting_profile_path, html:{id:"edit_user", class:"simple_form edit_user"} do |f|
         .st-Form
           %label.string.optional.st-Form_label 名前
@@ -35,16 +36,16 @@
           %div
             %label
               = f.check_box :email_status, id:"user_public_email", class:"st-Form_checkbox"
-              メールアドレスを全体に公開する
+              メールアドレスを公開する
           .st-Form_help
             - if @email.present?
-              誰もがあなたのメールアドレス(
+              あなたのメールアドレス(
               %small
                 = @email
-              )を見れる状態になります。
+              )が訪問者に表示されます。
             - else
-              メールアドレスは設定されていません
-            =link_to "メールアドレスを変更", ""
+              メールアドレスは設定されていません。
+            =link_to "メールアドレスを変更", "/setting/account"
         .st-Form.team
           %label.st-Form_label.position 所属チーム
           = f.text_field :team ,placeholder: "現在所属しているチーム、学校名など", id:"user_team", class:"st-Form_text"
