--- a/app/views/profiles/edit.html.haml
+++ b/app/views/profiles/edit.html.haml
@@ -1,23 +1,23 @@
 = render "shared/header"
-.p-settings.px-2.pt-4{class: "px-1@s pt-1@s"}
-  .p-settings_container
-    .p-settings_menu
-      =link_to "プロフィール", "/setting/profile", {class:"p-settings_menuItem p-settings_menuItem-active"}
-      =link_to "ユーザー設定","/setting/account",{class:"p-settings_menuItem"}
-    .p-settings_main
-      .p-settings_titleSection
+.setting.px-2.pt-4{class: "px-1@s pt-1@s"}
+  .setting_container
+    .setting_menu
+      =link_to "プロフィール", "/setting/profile", {class:"setting_menuItem setting_menuItem-active"}
+      =link_to "ユーザー設定","/setting/account",{class:"setting_menuItem"}
+    .setting_main
+      .setting_titleSection
         // ユーザーマイページへのリンク
-        %a.p-settings_userLogo{href: ""} 
+        %a.setting_userLogo{href: ""} 
           //アイコン機能実装時、変更
           %img{src: "https://pbs.twimg.com/profile_images/1174154846615662593/S8pmypM9_bigger.jpg"}
         -if current_user.nickname.nil?
           =link_to "/setting/account", {class:"p-setteings_nameNil"} do
             ユーザー名が設定されていません
         -else
-          =link_to "",{class:"p-settings_userName"} do
+          =link_to "",{class:"setting_userName"} do
             ="@#{current_user.nickname} アカウント"
-        %span.p-settings_titleSeparator /
-        %span.p-settings_title プロフィール
+        %span.setting_titleSeparator /
+        %span.setting_title プロフィール
       =form_for @profile,url:setting_profile_path, html:{id:"edit_user", class:"simple_form edit_user"} do |f|
         .st-Form
           %label.string.optional.st-Form_label 名前
