--- a/app/assets/stylesheets/articles/show.scss
+++ b/app/assets/stylesheets/articles/show.scss
@@ -5,8 +5,8 @@
     padding-bottom: 4rem;
     display: grid;
     display: -ms-grid;
-    grid-template-columns: 8rem calc(100% - 30rem - 8rem) 30rem;
-    -ms-grid-columns: 8rem calc(100% - 30rem - 8rem) 30rem;
+    grid-template-columns: 8rem calc(100% - 8rem);
+    -ms-grid-columns: 8rem calc(100% - 8rem);
     grid-template-rows: minmax(27rem,auto) 1fr;
     -ms-grid-rows: minmax(27rem,auto) 1fr;
     max-width: 128rem;
@@ -118,7 +118,7 @@
       grid-row: 1 / 3;
       -ms-grid-row: 1;
       -ms-grid-row-span: 3;
-      padding: 1.6rem;
+      padding: 1.6rem 15rem;
       .p-items_article {
         background-color: #fff;
         padding: 3.2rem;
@@ -149,7 +149,7 @@
                   margin-right: 0.8rem;
                 }
                 .it-Header_authorName {
-                  font-size: 1.8rem;
+                  font-size: 2rem;
                   color: inherit;
                 }
               }
@@ -410,73 +410,70 @@
           }
         }
         .ai-Container {
-          display: flex;
           width: 100%;
           padding-top: 4rem;
           border-top: 0.1rem solid #ddd;
           .ai-User {
-            display: flex;
             width: 100%;
             margin-right: 1.6rem;
             word-wrap: break-word;
             .ai-User_image {
-              display: flex;
               overflow: hidden;
               border-radius: .2em;
               width: 6rem;
               height: 6rem;
               margin-right: 1.6rem;
             }
-            .ai-User_body {
-              flex-grow: 1;
-              width: 0;
-              min-width: 0;
-              .ai-User_header {
-                display: flex;
-                flex-wrap: wrap;
-                align-items: center;
-                margin-bottom: 0.8rem;
-                .ai-User_name{
-                  color: inherit;
-                  font-size: 1.6rem;
-                  font-weight: 700;
-                  margin-right: 0.8rem;
-                }
-                .ai-User_urlname {
-                  font-size: 1.4rem;
-                  color: #999;
-                  margin-right: 0.8rem;
-                }
-                .ai-User_organization {
-                  width: 2.4rem;
-                  height: 2.4rem;
-                  border: 0.1rem solid #ddd;
-                  margin-right: 0.8rem;
+            .ai-User_header {
+              display: flex;
+              flex-wrap: wrap;
+              align-items: center;
+              margin-bottom: 0.8rem;
+              .ai-User_name{
+                color: inherit;
+                font-size: 1.8rem;
+                font-weight: 700;
+                margin-right: 0.8rem;
+                a{
+                  color:#14171A;
                 }
               }
-              .ai-User_description {
+              .ai-User_urlname {
+                font-size: 1.7rem;
+                margin-right: 0.8rem;
+                a{
+                  color: #657786;
+                }
+              }
+              .ai-User_organization {
+                width: 2.4rem;
+                height: 2.4rem;
+                border: 0.1rem solid #ddd;
+                margin-right: 0.8rem;
+              }
+            }
+            .ai-User_description {
+              font-size: 1.4rem;
+              color: #777;
+              margin-bottom: 0.4rem;
+            }
+            .ai-User_footer {
+              margin-top: 1.6rem;
+              display: flex;
+              align-items: center;
+              .it-UserFollowButton-follow {
+                background-color: #fff;
+              }
+              .it-UserFollowButton {
+                display: inline-block;
+                -webkit-appearance: button;
+                border: 0.1rem solid #ccc;
+                border-radius: .1em;
                 font-size: 1.4rem;
-                color: #777;
-                margin-bottom: 0.4rem;
-              }
-              .ai-User_footer {
-                margin-top: 1.6rem;
-                display: flex;
-                align-items: center;
-                .it-UserFollowButton-follow {
-                  background-color: #fff;
-                }
-                .it-UserFollowButton {
-                  display: inline-block;
-                  -webkit-appearance: button;
-                  border: 0.1rem solid #ccc;
-                  border-radius: .1em;
-                  font-size: 1.4rem;
-                  padding: 0.4rem 0;
-                  width: 12rem;
-                  text-align: center;
-                  cursor: pointer;
-                }
+                padding: 0.4rem 0;
+                width: 12rem;
+                text-align: center;
+                cursor: pointer;
               }
             }
           }
@@ -569,9 +566,6 @@
   }
 }
 @media (max-width: 991px){
-  .p-items_toc, .p-items_rightDummy {
-      display: none;
-  }
   .p-items_wrapper .p-items_article {
     max-width: 72rem;
     margin: 0 auto;
@@ -583,6 +577,7 @@
     grid-column: 1 / 4;
     -ms-grid-column: 1;
     -ms-grid-column-span: 4;
+    padding: 1.6rem;
   }
   .p-items_stickyMenu, .p-items_leftDummy {
     margin-left: 1.6rem;
